1stAssignment/part1/test_grammar/ParTest.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from ParTest.y
-----------------------------------------------------------------------------

state 121 contains 3 reduce/reduce conflicts.

rule 50 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pListDef -> ListDef                         (1)
	%start_pDef -> Def                                 (2)
	%start_pListArg -> ListArg                         (3)
	%start_pArg -> Arg                                 (4)
	%start_pConst -> Const                             (5)
	%start_pInitialization -> Initialization           (6)
	%start_pStm -> Stm                                 (7)
	%start_pVar -> Var                                 (8)
	%start_pListStm -> ListStm                         (9)
	%start_pExp15 -> Exp15                             (10)
	%start_pExp10 -> Exp10                             (11)
	%start_pExp -> Exp                                 (12)
	%start_pExp1 -> Exp1                               (13)
	%start_pExp2 -> Exp2                               (14)
	%start_pExp3 -> Exp3                               (15)
	%start_pExp4 -> Exp4                               (16)
	%start_pExp5 -> Exp5                               (17)
	%start_pExp6 -> Exp6                               (18)
	%start_pExp7 -> Exp7                               (19)
	%start_pExp8 -> Exp8                               (20)
	%start_pExp9 -> Exp9                               (21)
	%start_pExp11 -> Exp11                             (22)
	%start_pExp12 -> Exp12                             (23)
	%start_pExp13 -> Exp13                             (24)
	%start_pExp14 -> Exp14                             (25)
	%start_pListExp -> ListExp                         (26)
	%start_pQualConst -> QualConst                     (27)
	%start_pTemplateInst -> TemplateInst               (28)
	%start_pTypeList -> TypeList                       (29)
	%start_pType -> Type                               (30)
	%start_pLiteral -> Literal                         (31)
	%start_pListId -> ListId                           (32)
	Chars -> L_Chars                                   (33)
	Strings -> L_Strings                               (34)
	Integers -> L_Integers                             (35)
	Id -> L_Id                                         (36)
	Program -> ListDef                                 (37)
	ListDef ->                                         (38)
	ListDef -> Def ListDef                             (39)
	Def -> Type Id '(' ListArg ')' '{' ListStm '}'     (40)
	ListArg ->                                         (41)
	ListArg -> Arg                                     (42)
	ListArg -> Arg ',' ListArg                         (43)
	Arg -> Type                                        (44)
	Arg -> Type Id                                     (45)
	Arg -> Type Id Initialization                      (46)
	Arg -> Const Type Id                               (47)
	Const -> 'const'                                   (48)
	Initialization -> '=' Exp                          (49)
	Initialization -> '=' Literal                      (50)
	Stm -> Exp ';'                                     (51)
	Stm -> Var ';'                                     (52)
	Stm -> 'return' Exp ';'                            (53)
	Stm -> 'return' ';'                                (54)
	Var ->                                             (55)
	ListStm ->                                         (56)
	ListStm -> Stm ListStm                             (57)
	Exp15 -> Literal                                   (58)
	Exp15 -> QualConst                                 (59)
	Exp15 -> '(' Exp ')'                               (60)
	Exp10 -> Exp10 '>>' Exp11                          (61)
	Exp10 -> Exp10 '<<' Exp11                          (62)
	Exp10 -> Exp11                                     (63)
	Exp -> Exp1                                        (64)
	Exp1 -> Exp2                                       (65)
	Exp2 -> Exp3                                       (66)
	Exp3 -> Exp4                                       (67)
	Exp4 -> Exp5                                       (68)
	Exp5 -> Exp6                                       (69)
	Exp6 -> Exp7                                       (70)
	Exp7 -> Exp8                                       (71)
	Exp8 -> Exp9                                       (72)
	Exp9 -> Exp10                                      (73)
	Exp11 -> Exp12                                     (74)
	Exp12 -> Exp13                                     (75)
	Exp13 -> Exp14                                     (76)
	Exp14 -> Exp15                                     (77)
	ListExp ->                                         (78)
	ListExp -> Exp                                     (79)
	ListExp -> Exp ',' ListExp                         (80)
	QualConst -> Id                                    (81)
	QualConst -> QualConst '::' Id                     (82)
	QualConst -> QualConst '::' TemplateInst           (83)
	TemplateInst -> Id '<' TypeList '>'                (84)
	TypeList -> Type                                   (85)
	TypeList -> Type ',' TypeList                      (86)
	Type -> 'bool'                                     (87)
	Type -> 'double'                                   (88)
	Type -> 'int'                                      (89)
	Type -> 'void'                                     (90)
	Type -> 'char'                                     (91)
	Type -> Id                                         (92)
	Literal -> Integers                                (93)
	Literal -> Strings                                 (94)
	Literal -> Chars                                   (95)
	ListId -> Id                                       (96)
	ListId -> Id ',' ListId                            (97)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	','            { PT _ (TS _ 3) }
	'::'           { PT _ (TS _ 4) }
	';'            { PT _ (TS _ 5) }
	'<'            { PT _ (TS _ 6) }
	'<<'           { PT _ (TS _ 7) }
	'='            { PT _ (TS _ 8) }
	'>'            { PT _ (TS _ 9) }
	'>>'           { PT _ (TS _ 10) }
	'bool'         { PT _ (TS _ 11) }
	'char'         { PT _ (TS _ 12) }
	'const'        { PT _ (TS _ 13) }
	'double'       { PT _ (TS _ 14) }
	'int'          { PT _ (TS _ 15) }
	'return'       { PT _ (TS _ 16) }
	'void'         { PT _ (TS _ 17) }
	'{'            { PT _ (TS _ 18) }
	'}'            { PT _ (TS _ 19) }
	L_Chars        { PT _ (T_Chars $$) }
	L_Strings      { PT _ (T_Strings $$) }
	L_Integers     { PT _ (T_Integers $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pListDef rule  1
	%start_pDef     rule  2
	%start_pListArg rule  3
	%start_pArg     rule  4
	%start_pConst   rule  5
	%start_pInitialization rule  6
	%start_pStm     rule  7
	%start_pVar     rule  8
	%start_pListStm rule  9
	%start_pExp15   rule  10
	%start_pExp10   rule  11
	%start_pExp     rule  12
	%start_pExp1    rule  13
	%start_pExp2    rule  14
	%start_pExp3    rule  15
	%start_pExp4    rule  16
	%start_pExp5    rule  17
	%start_pExp6    rule  18
	%start_pExp7    rule  19
	%start_pExp8    rule  20
	%start_pExp9    rule  21
	%start_pExp11   rule  22
	%start_pExp12   rule  23
	%start_pExp13   rule  24
	%start_pExp14   rule  25
	%start_pListExp rule  26
	%start_pQualConst rule  27
	%start_pTemplateInst rule  28
	%start_pTypeList rule  29
	%start_pType    rule  30
	%start_pLiteral rule  31
	%start_pListId  rule  32
	Chars           rule  33
	Strings         rule  34
	Integers        rule  35
	Id              rule  36
	Program         rule  37
	ListDef         rules 38, 39
	Def             rule  40
	ListArg         rules 41, 42, 43
	Arg             rules 44, 45, 46, 47
	Const           rule  48
	Initialization  rules 49, 50
	Stm             rules 51, 52, 53, 54
	Var             rule  55
	ListStm         rules 56, 57
	Exp15           rules 58, 59, 60
	Exp10           rules 61, 62, 63
	Exp             rule  64
	Exp1            rule  65
	Exp2            rule  66
	Exp3            rule  67
	Exp4            rule  68
	Exp5            rule  69
	Exp6            rule  70
	Exp7            rule  71
	Exp8            rule  72
	Exp9            rule  73
	Exp11           rule  74
	Exp12           rule  75
	Exp13           rule  76
	Exp14           rule  77
	ListExp         rules 78, 79, 80
	QualConst       rules 81, 82, 83
	TemplateInst    rule  84
	TypeList        rules 85, 86
	Type            rules 87, 88, 89, 90, 91, 92
	Literal         rules 93, 94, 95
	ListId          rules 96, 97

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'bool'         shift, and enter state 46
	'char'         shift, and enter state 47
	'double'       shift, and enter state 48
	'int'          shift, and enter state 49
	'void'         shift, and enter state 50
	L_Id           shift, and enter state 37
	%eof           reduce using rule 38

	Id             goto state 44
	Program        goto state 113
	ListDef        goto state 114
	Def            goto state 112
	Type           goto state 110

State 1

	%start_pListDef -> . ListDef                        (rule 1)

	'bool'         shift, and enter state 46
	'char'         shift, and enter state 47
	'double'       shift, and enter state 48
	'int'          shift, and enter state 49
	'void'         shift, and enter state 50
	L_Id           shift, and enter state 37
	%eof           reduce using rule 38

	Id             goto state 44
	ListDef        goto state 111
	Def            goto state 112
	Type           goto state 110

State 2

	%start_pDef -> . Def                                (rule 2)

	'bool'         shift, and enter state 46
	'char'         shift, and enter state 47
	'double'       shift, and enter state 48
	'int'          shift, and enter state 49
	'void'         shift, and enter state 50
	L_Id           shift, and enter state 37

	Id             goto state 44
	Def            goto state 109
	Type           goto state 110

State 3

	%start_pListArg -> . ListArg                        (rule 3)

	'bool'         shift, and enter state 46
	'char'         shift, and enter state 47
	'const'        shift, and enter state 103
	'double'       shift, and enter state 48
	'int'          shift, and enter state 49
	'void'         shift, and enter state 50
	L_Id           shift, and enter state 37
	%eof           reduce using rule 41

	Id             goto state 44
	ListArg        goto state 107
	Arg            goto state 108
	Const          goto state 105
	Type           goto state 106

State 4

	%start_pArg -> . Arg                                (rule 4)

	'bool'         shift, and enter state 46
	'char'         shift, and enter state 47
	'const'        shift, and enter state 103
	'double'       shift, and enter state 48
	'int'          shift, and enter state 49
	'void'         shift, and enter state 50
	L_Id           shift, and enter state 37

	Id             goto state 44
	Arg            goto state 104
	Const          goto state 105
	Type           goto state 106

State 5

	%start_pConst -> . Const                            (rule 5)

	'const'        shift, and enter state 103

	Const          goto state 102

State 6

	%start_pInitialization -> . Initialization          (rule 6)

	'='            shift, and enter state 101

	Initialization goto state 100

State 7

	%start_pStm -> . Stm                                (rule 7)

	'('            shift, and enter state 76
	';'            reduce using rule 55
	'return'       shift, and enter state 97
	L_Chars        shift, and enter state 34
	L_Strings      shift, and enter state 42
	L_Integers     shift, and enter state 43
	L_Id           shift, and enter state 37

	Chars          goto state 38
	Strings        goto state 39
	Integers       goto state 40
	Id             goto state 55
	Stm            goto state 99
	Var            goto state 94
	Exp15          goto state 57
	Exp10          goto state 58
	Exp            goto state 96
	Exp1           goto state 60
	Exp2           goto state 61
	Exp3           goto state 62
	Exp4           goto state 63
	Exp5           goto state 64
	Exp6           goto state 65
	Exp7           goto state 66
	Exp8           goto state 67
	Exp9           goto state 68
	Exp11          goto state 69
	Exp12          goto state 70
	Exp13          goto state 71
	Exp14          goto state 72
	QualConst      goto state 74
	Literal        goto state 75

State 8

	%start_pVar -> . Var                                (rule 8)

	%eof           reduce using rule 55

	Var            goto state 98

State 9

	%start_pListStm -> . ListStm                        (rule 9)

	'('            shift, and enter state 76
	';'            reduce using rule 55
	'return'       shift, and enter state 97
	L_Chars        shift, and enter state 34
	L_Strings      shift, and enter state 42
	L_Integers     shift, and enter state 43
	L_Id           shift, and enter state 37
	%eof           reduce using rule 56

	Chars          goto state 38
	Strings        goto state 39
	Integers       goto state 40
	Id             goto state 55
	Stm            goto state 93
	Var            goto state 94
	ListStm        goto state 95
	Exp15          goto state 57
	Exp10          goto state 58
	Exp            goto state 96
	Exp1           goto state 60
	Exp2           goto state 61
	Exp3           goto state 62
	Exp4           goto state 63
	Exp5           goto state 64
	Exp6           goto state 65
	Exp7           goto state 66
	Exp8           goto state 67
	Exp9           goto state 68
	Exp11          goto state 69
	Exp12          goto state 70
	Exp13          goto state 71
	Exp14          goto state 72
	QualConst      goto state 74
	Literal        goto state 75

State 10

	%start_pExp15 -> . Exp15                            (rule 10)

	'('            shift, and enter state 76
	L_Chars        shift, and enter state 34
	L_Strings      shift, and enter state 42
	L_Integers     shift, and enter state 43
	L_Id           shift, and enter state 37

	Chars          goto state 38
	Strings        goto state 39
	Integers       goto state 40
	Id             goto state 55
	Exp15          goto state 92
	QualConst      goto state 74
	Literal        goto state 75

State 11

	%start_pExp10 -> . Exp10                            (rule 11)

	'('            shift, and enter state 76
	L_Chars        shift, and enter state 34
	L_Strings      shift, and enter state 42
	L_Integers     shift, and enter state 43
	L_Id           shift, and enter state 37

	Chars          goto state 38
	Strings        goto state 39
	Integers       goto state 40
	Id             goto state 55
	Exp15          goto state 57
	Exp10          goto state 91
	Exp11          goto state 69
	Exp12          goto state 70
	Exp13          goto state 71
	Exp14          goto state 72
	QualConst      goto state 74
	Literal        goto state 75

State 12

	%start_pExp -> . Exp                                (rule 12)

	'('            shift, and enter state 76
	L_Chars        shift, and enter state 34
	L_Strings      shift, and enter state 42
	L_Integers     shift, and enter state 43
	L_Id           shift, and enter state 37

	Chars          goto state 38
	Strings        goto state 39
	Integers       goto state 40
	Id             goto state 55
	Exp15          goto state 57
	Exp10          goto state 58
	Exp            goto state 90
	Exp1           goto state 60
	Exp2           goto state 61
	Exp3           goto state 62
	Exp4           goto state 63
	Exp5           goto state 64
	Exp6           goto state 65
	Exp7           goto state 66
	Exp8           goto state 67
	Exp9           goto state 68
	Exp11          goto state 69
	Exp12          goto state 70
	Exp13          goto state 71
	Exp14          goto state 72
	QualConst      goto state 74
	Literal        goto state 75

State 13

	%start_pExp1 -> . Exp1                              (rule 13)

	'('            shift, and enter state 76
	L_Chars        shift, and enter state 34
	L_Strings      shift, and enter state 42
	L_Integers     shift, and enter state 43
	L_Id           shift, and enter state 37

	Chars          goto state 38
	Strings        goto state 39
	Integers       goto state 40
	Id             goto state 55
	Exp15          goto state 57
	Exp10          goto state 58
	Exp1           goto state 89
	Exp2           goto state 61
	Exp3           goto state 62
	Exp4           goto state 63
	Exp5           goto state 64
	Exp6           goto state 65
	Exp7           goto state 66
	Exp8           goto state 67
	Exp9           goto state 68
	Exp11          goto state 69
	Exp12          goto state 70
	Exp13          goto state 71
	Exp14          goto state 72
	QualConst      goto state 74
	Literal        goto state 75

State 14

	%start_pExp2 -> . Exp2                              (rule 14)

	'('            shift, and enter state 76
	L_Chars        shift, and enter state 34
	L_Strings      shift, and enter state 42
	L_Integers     shift, and enter state 43
	L_Id           shift, and enter state 37

	Chars          goto state 38
	Strings        goto state 39
	Integers       goto state 40
	Id             goto state 55
	Exp15          goto state 57
	Exp10          goto state 58
	Exp2           goto state 88
	Exp3           goto state 62
	Exp4           goto state 63
	Exp5           goto state 64
	Exp6           goto state 65
	Exp7           goto state 66
	Exp8           goto state 67
	Exp9           goto state 68
	Exp11          goto state 69
	Exp12          goto state 70
	Exp13          goto state 71
	Exp14          goto state 72
	QualConst      goto state 74
	Literal        goto state 75

State 15

	%start_pExp3 -> . Exp3                              (rule 15)

	'('            shift, and enter state 76
	L_Chars        shift, and enter state 34
	L_Strings      shift, and enter state 42
	L_Integers     shift, and enter state 43
	L_Id           shift, and enter state 37

	Chars          goto state 38
	Strings        goto state 39
	Integers       goto state 40
	Id             goto state 55
	Exp15          goto state 57
	Exp10          goto state 58
	Exp3           goto state 87
	Exp4           goto state 63
	Exp5           goto state 64
	Exp6           goto state 65
	Exp7           goto state 66
	Exp8           goto state 67
	Exp9           goto state 68
	Exp11          goto state 69
	Exp12          goto state 70
	Exp13          goto state 71
	Exp14          goto state 72
	QualConst      goto state 74
	Literal        goto state 75

State 16

	%start_pExp4 -> . Exp4                              (rule 16)

	'('            shift, and enter state 76
	L_Chars        shift, and enter state 34
	L_Strings      shift, and enter state 42
	L_Integers     shift, and enter state 43
	L_Id           shift, and enter state 37

	Chars          goto state 38
	Strings        goto state 39
	Integers       goto state 40
	Id             goto state 55
	Exp15          goto state 57
	Exp10          goto state 58
	Exp4           goto state 86
	Exp5           goto state 64
	Exp6           goto state 65
	Exp7           goto state 66
	Exp8           goto state 67
	Exp9           goto state 68
	Exp11          goto state 69
	Exp12          goto state 70
	Exp13          goto state 71
	Exp14          goto state 72
	QualConst      goto state 74
	Literal        goto state 75

State 17

	%start_pExp5 -> . Exp5                              (rule 17)

	'('            shift, and enter state 76
	L_Chars        shift, and enter state 34
	L_Strings      shift, and enter state 42
	L_Integers     shift, and enter state 43
	L_Id           shift, and enter state 37

	Chars          goto state 38
	Strings        goto state 39
	Integers       goto state 40
	Id             goto state 55
	Exp15          goto state 57
	Exp10          goto state 58
	Exp5           goto state 85
	Exp6           goto state 65
	Exp7           goto state 66
	Exp8           goto state 67
	Exp9           goto state 68
	Exp11          goto state 69
	Exp12          goto state 70
	Exp13          goto state 71
	Exp14          goto state 72
	QualConst      goto state 74
	Literal        goto state 75

State 18

	%start_pExp6 -> . Exp6                              (rule 18)

	'('            shift, and enter state 76
	L_Chars        shift, and enter state 34
	L_Strings      shift, and enter state 42
	L_Integers     shift, and enter state 43
	L_Id           shift, and enter state 37

	Chars          goto state 38
	Strings        goto state 39
	Integers       goto state 40
	Id             goto state 55
	Exp15          goto state 57
	Exp10          goto state 58
	Exp6           goto state 84
	Exp7           goto state 66
	Exp8           goto state 67
	Exp9           goto state 68
	Exp11          goto state 69
	Exp12          goto state 70
	Exp13          goto state 71
	Exp14          goto state 72
	QualConst      goto state 74
	Literal        goto state 75

State 19

	%start_pExp7 -> . Exp7                              (rule 19)

	'('            shift, and enter state 76
	L_Chars        shift, and enter state 34
	L_Strings      shift, and enter state 42
	L_Integers     shift, and enter state 43
	L_Id           shift, and enter state 37

	Chars          goto state 38
	Strings        goto state 39
	Integers       goto state 40
	Id             goto state 55
	Exp15          goto state 57
	Exp10          goto state 58
	Exp7           goto state 83
	Exp8           goto state 67
	Exp9           goto state 68
	Exp11          goto state 69
	Exp12          goto state 70
	Exp13          goto state 71
	Exp14          goto state 72
	QualConst      goto state 74
	Literal        goto state 75

State 20

	%start_pExp8 -> . Exp8                              (rule 20)

	'('            shift, and enter state 76
	L_Chars        shift, and enter state 34
	L_Strings      shift, and enter state 42
	L_Integers     shift, and enter state 43
	L_Id           shift, and enter state 37

	Chars          goto state 38
	Strings        goto state 39
	Integers       goto state 40
	Id             goto state 55
	Exp15          goto state 57
	Exp10          goto state 58
	Exp8           goto state 82
	Exp9           goto state 68
	Exp11          goto state 69
	Exp12          goto state 70
	Exp13          goto state 71
	Exp14          goto state 72
	QualConst      goto state 74
	Literal        goto state 75

State 21

	%start_pExp9 -> . Exp9                              (rule 21)

	'('            shift, and enter state 76
	L_Chars        shift, and enter state 34
	L_Strings      shift, and enter state 42
	L_Integers     shift, and enter state 43
	L_Id           shift, and enter state 37

	Chars          goto state 38
	Strings        goto state 39
	Integers       goto state 40
	Id             goto state 55
	Exp15          goto state 57
	Exp10          goto state 58
	Exp9           goto state 81
	Exp11          goto state 69
	Exp12          goto state 70
	Exp13          goto state 71
	Exp14          goto state 72
	QualConst      goto state 74
	Literal        goto state 75

State 22

	%start_pExp11 -> . Exp11                            (rule 22)

	'('            shift, and enter state 76
	L_Chars        shift, and enter state 34
	L_Strings      shift, and enter state 42
	L_Integers     shift, and enter state 43
	L_Id           shift, and enter state 37

	Chars          goto state 38
	Strings        goto state 39
	Integers       goto state 40
	Id             goto state 55
	Exp15          goto state 57
	Exp11          goto state 80
	Exp12          goto state 70
	Exp13          goto state 71
	Exp14          goto state 72
	QualConst      goto state 74
	Literal        goto state 75

State 23

	%start_pExp12 -> . Exp12                            (rule 23)

	'('            shift, and enter state 76
	L_Chars        shift, and enter state 34
	L_Strings      shift, and enter state 42
	L_Integers     shift, and enter state 43
	L_Id           shift, and enter state 37

	Chars          goto state 38
	Strings        goto state 39
	Integers       goto state 40
	Id             goto state 55
	Exp15          goto state 57
	Exp12          goto state 79
	Exp13          goto state 71
	Exp14          goto state 72
	QualConst      goto state 74
	Literal        goto state 75

State 24

	%start_pExp13 -> . Exp13                            (rule 24)

	'('            shift, and enter state 76
	L_Chars        shift, and enter state 34
	L_Strings      shift, and enter state 42
	L_Integers     shift, and enter state 43
	L_Id           shift, and enter state 37

	Chars          goto state 38
	Strings        goto state 39
	Integers       goto state 40
	Id             goto state 55
	Exp15          goto state 57
	Exp13          goto state 78
	Exp14          goto state 72
	QualConst      goto state 74
	Literal        goto state 75

State 25

	%start_pExp14 -> . Exp14                            (rule 25)

	'('            shift, and enter state 76
	L_Chars        shift, and enter state 34
	L_Strings      shift, and enter state 42
	L_Integers     shift, and enter state 43
	L_Id           shift, and enter state 37

	Chars          goto state 38
	Strings        goto state 39
	Integers       goto state 40
	Id             goto state 55
	Exp15          goto state 57
	Exp14          goto state 77
	QualConst      goto state 74
	Literal        goto state 75

State 26

	%start_pListExp -> . ListExp                        (rule 26)

	'('            shift, and enter state 76
	L_Chars        shift, and enter state 34
	L_Strings      shift, and enter state 42
	L_Integers     shift, and enter state 43
	L_Id           shift, and enter state 37
	%eof           reduce using rule 78

	Chars          goto state 38
	Strings        goto state 39
	Integers       goto state 40
	Id             goto state 55
	Exp15          goto state 57
	Exp10          goto state 58
	Exp            goto state 59
	Exp1           goto state 60
	Exp2           goto state 61
	Exp3           goto state 62
	Exp4           goto state 63
	Exp5           goto state 64
	Exp6           goto state 65
	Exp7           goto state 66
	Exp8           goto state 67
	Exp9           goto state 68
	Exp11          goto state 69
	Exp12          goto state 70
	Exp13          goto state 71
	Exp14          goto state 72
	ListExp        goto state 73
	QualConst      goto state 74
	Literal        goto state 75

State 27

	%start_pQualConst -> . QualConst                    (rule 27)

	L_Id           shift, and enter state 37

	Id             goto state 55
	QualConst      goto state 56

State 28

	%start_pTemplateInst -> . TemplateInst              (rule 28)

	L_Id           shift, and enter state 37

	Id             goto state 53
	TemplateInst   goto state 54

State 29

	%start_pTypeList -> . TypeList                      (rule 29)

	'bool'         shift, and enter state 46
	'char'         shift, and enter state 47
	'double'       shift, and enter state 48
	'int'          shift, and enter state 49
	'void'         shift, and enter state 50
	L_Id           shift, and enter state 37

	Id             goto state 44
	TypeList       goto state 51
	Type           goto state 52

State 30

	%start_pType -> . Type                              (rule 30)

	'bool'         shift, and enter state 46
	'char'         shift, and enter state 47
	'double'       shift, and enter state 48
	'int'          shift, and enter state 49
	'void'         shift, and enter state 50
	L_Id           shift, and enter state 37

	Id             goto state 44
	Type           goto state 45

State 31

	%start_pLiteral -> . Literal                        (rule 31)

	L_Chars        shift, and enter state 34
	L_Strings      shift, and enter state 42
	L_Integers     shift, and enter state 43

	Chars          goto state 38
	Strings        goto state 39
	Integers       goto state 40
	Literal        goto state 41

State 32

	%start_pListId -> . ListId                          (rule 32)

	L_Id           shift, and enter state 37

	Id             goto state 35
	ListId         goto state 36

State 33

	Chars -> . L_Chars                                  (rule 33)

	L_Chars        shift, and enter state 34


State 34

	Chars -> L_Chars .                                  (rule 33)

	')'            reduce using rule 33
	','            reduce using rule 33
	';'            reduce using rule 33
	'<<'           reduce using rule 33
	'>>'           reduce using rule 33
	%eof           reduce using rule 33


State 35

	ListId -> Id .                                      (rule 96)
	ListId -> Id . ',' ListId                           (rule 97)

	','            shift, and enter state 134
	%eof           reduce using rule 96


State 36

	%start_pListId -> ListId .                          (rule 32)

	%eof           accept


State 37

	Id -> L_Id .                                        (rule 36)
